--- a/public/login.html
+++ b/public/login.html
@@ -5,25 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
+    <link rel="stylesheet" href="../asset/signin.css"> <!--스타일시트 적용-->
 </head>
 
 <body>
+    <div class="logo">
+        <a href="Main.html"><img src="../asset/이미지/수룡선배 아이콘2.png" width="350px"></a>
+    </div>
     <h1>로그인</h1>
     <form id="loginForm">
         <label for="loginUsername">아이디:</label><br>
-        <input type="text" id="loginUsername" name="username"><br><br>
+        <input type="text" id="loginUsername" name="userID"><br><br>
         <label for="loginPassword">비밀번호:</label><br>
         <input type="password" id="loginPassword" name="password"><br><br>
         <input type="submit" value="로그인">
     </form>
 
     <p>회원이 아니신가요? <a href="/register">회원가입</a></p>
+    <p id="error-message" style="color: red;"></p>
+    <a href="reset_request.html">비밀번호 찾기</a>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
 
-            const username = document.getElementById('loginUsername').value;
+            const userID = document.getElementById('loginUsername').value;
             const password = document.getElementById('loginPassword').value;
 
             fetch('/users/login', {
@@ -31,7 +37,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ username, password })
+                body: JSON.stringify({ userID, password })
             })
             .then(response => response.json())
             .then(data => {
@@ -39,11 +45,12 @@
                     sessionStorage.setItem('authToken', data.token);
                     window.location.href = '/index.html';
                 } else {
-                    alert(data.msg);
+                    document.getElementById('error-message').innerText = data.msg;
                 }
             })
             .catch((error) => {
                 console.error('Error:', error);
+                document.getElementById('error-message').innerText = '로그인 중 오류가 발생했습니다.';
             });
         });
     </script>
