--- a/public/view.html
+++ b/public/view.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
+    <link rel="stylesheet" href="../asset/view.css">
     <style>
         .tabs {
             display: flex;
@@ -44,106 +45,168 @@
 
 <body>
     <div class="tabs">
-        <div class="tab" onclick="showTab('view')">글 보기</div>
+        <div class="tab" onclick="showTab('faq')">FAQ</div>
+        <div class="tab" onclick="showTab('qa')">Q&A</div>
     </div>
 
-    <div id="view" class="tab-content active">
-        <h1>글 목록</h1>
-        <input type="text" id="searchInput" placeholder="제목이 검색됩니다!">
+    <div id="faq" class="tab-content">
+        <h1>FAQ</h1>
+        <div id="faqPosts"></div>
+    </div>
+
+    <div id="qa" class="tab-content">
+        <h1>Q&A 게시판</h1>
+        <p>학교 생활하면서 궁금한 사항들을 묻고 답하는 게시판입니다.</p>
+        <input type="text" id="searchInput" placeholder="검색어를 입력하세요.">
         <button onclick="searchPosts(1)">검색</button>
         <p id="error" class="error">검색어를 두 글자 이상 입력하세요.</p>
-        <div id="posts"></div>
-        <div class="pagination" id="pagination"></div>
+        <div id="qaPosts"></div>
+        <div class="pagination" id="qaPagination"></div>
         <div class="write-button">
-            <button onclick="location.href='/write.html'">글 작성</button>
+            <button onclick="location.href='/write.html'">등록</button>
         </div>
     </div>
 
-    <script>
-        const authToken = sessionStorage.getItem('authToken');
+    <div id="deleteModal" style="display: none;">
+        <h2>글 삭제</h2>
+        <label for="deletePassword">비밀번호:</label>
+        <input type="password" id="deletePassword">
+        <button onclick="confirmDelete()">확인</button>
+        <button onclick="closeDeleteModal()">취소</button>
+    </div>
 
-        if (!authToken) {
-            alert('로그인 후 접근 가능합니다');
-            window.location.href = '/login';
-        }
+    <script>
+        let deletePostId = null;
 
         function showTab(tabId) {
             const contents = document.querySelectorAll('.tab-content');
             contents.forEach(content => content.classList.remove('active'));
             document.getElementById(tabId).classList.add('active');
 
-            if (tabId === 'view') {
-                fetchPosts(1);
-            }
-        }
-
-        function fetchPosts(page) {
-            const query = document.getElementById('searchInput').value;
-            fetch(`/posts?page=${page}&query=${query}`, {
-                headers: {
-                    'x-auth-token': authToken
+            if (tabId === 'faq') {
+                fetchFaqPosts();
+            } else if (tabId === 'qa') {
+                const token = sessionStorage.getItem('authToken');
+                if (token) {
+                    fetch('/users/me', {
+                        headers: {
+                            'Authorization': `Bearer ${token}`
+                        }
+                    })
+                    .then(response => response.json())
+                    .then(user => {
+                        if (user.username) {
+                            fetchQaPosts(1);
+                        } else {
+                            alert('로그인이 필요합니다.');
+                            showTab('faq');
+                        }
+                    })
+                    .catch(error => {
+                        alert('로그인이 필요합니다.');
+                        showTab('faq');
+                    });
+                } else {
+                    alert('로그인이 필요합니다.');
+                    showTab('faq');
                 }
-            })
-            .then(response => response.json())
-            .then(data => {
-                displayPosts(data.posts);
-                setupPagination(data.totalPages, page);
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
-        }
-
-        function searchPosts(page) {
-            const query = document.getElementById('searchInput').value;
-            if (query.length < 2 && query.length !== 0) {
-                document.getElementById('error').style.display = 'block';
-                return;
             }
-            document.getElementById('error').style.display = 'none';
-            fetchPosts(page);
         }
 
-        function displayPosts(posts) {
-            const postsDiv = document.getElementById('posts');
-            postsDiv.innerHTML = '';
-            posts.forEach(post => {
-                const postElement = document.createElement('div');
-                const postDate = new Date(post.date);
-                const formattedDate = postDate.toLocaleString();
-                postElement.innerHTML = `
-                    <h2>${post.title}</h2>
-                    <p>${post.content}</p>
-                    <p><small>작성자: ${post.author.username}, 작성일: ${formattedDate}</small></p>
-                    <button onclick="deletePost('${post._id}')">삭제</button>
-                    <hr>
-                `;
-
-
-
-                postsDiv.appendChild(postElement);
-            });
+        function fetchFaqPosts() {
+            fetch('/posts/faq')
+                .then(response => response.json())
+                .then(posts => {
+                    const faqPostsDiv = document.getElementById('faqPosts');
+                    faqPostsDiv.innerHTML = '';
+                    posts.forEach(post => {
+                        const postElement = document.createElement('div');
+                        postElement.innerHTML = `
+                            <h2>${post.title} <img src="plus-icon.png" onclick="toggleFaqPost('${post._id}')"></h2>
+                            <div id="faqContent-${post._id}" style="display: none;">
+                                <p>${post.content}</p>
+                            </div>
+                        `;
+                        faqPostsDiv.appendChild(postElement);
+                    });
+                });
         }
 
-        function deletePost(postId) {
-            fetch(`/posts/${postId}`, {
+        function toggleFaqPost(postId) {
+            const contentDiv = document.getElementById(`faqContent-${postId}`);
+            contentDiv.style.display = contentDiv.style.display === 'none' ? 'block' : 'none';
+        }
+
+        function fetchQaPosts(page = 1) {
+            const query = document.getElementById('searchInput').value;
+            fetch(`/posts/qa?page=${page}&query=${query}`)
+                .then(response => response.json())
+                .then(data => {
+                    const { posts, totalPages } = data;
+                    const qaPostsDiv = document.getElementById('qaPosts');
+                    qaPostsDiv.innerHTML = `
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>번호</th>
+                                    <th>제목</th>
+                                    <th>글쓴이</th>
+                                    <th>작성일</th>
+                                    <th>삭제</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                ${posts.map((post, index) => `
+                                    <tr>
+                                        <td>${(page - 1) * 5 + index + 1}</td>
+                                        <td><a href="/qa_post.html?id=${post._id}">${post.title}</a></td>
+                                        <td>${post.author.username}</td>
+                                        <td>${new Date(post.date).toLocaleString()}</td>
+                                        <td><button onclick="showDeleteModal('${post._id}')">삭제</button></td>
+                                    </tr>
+                                `).join('')}
+                            </tbody>
+                        </table>
+                    `;
+                    setupPagination(totalPages, page);
+                });
+        }
+
+        function showDeleteModal(postId) {
+            deletePostId = postId;
+            document.getElementById('deleteModal').style.display = 'block';
+        }
+
+        function closeDeleteModal() {
+            deletePostId = null;
+            document.getElementById('deleteModal').style.display = 'none';
+        }
+
+        function confirmDelete() {
+            const password = document.getElementById('deletePassword').value;
+            fetch(`/posts/${deletePostId}`, {
                 method: 'DELETE',
                 headers: {
-                    'x-auth-token': authToken
-                }
+                    'Content-Type': 'application/json',
+                    'x-auth-token': localStorage.getItem('token')
+                },
+                body: JSON.stringify({ password })
             })
-            .then(response => response.json())
-            .then(data => {
-                alert(data.message);
-                fetchPosts(1);
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.msg);
+                    if (data.success) {
+                        fetchQaPosts();
+                    }
+                    closeDeleteModal();
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
         }
 
         function setupPagination(totalPages, currentPage) {
-            const paginationDiv = document.getElementById('pagination');
+            const paginationDiv = document.getElementById('qaPagination');
             paginationDiv.innerHTML = '';
             for (let i = 1; i <= totalPages; i++) {
                 const pageItem = document.createElement('span');
@@ -152,12 +215,12 @@
                 if (i === currentPage) {
                     pageItem.style.fontWeight = 'bold';
                 }
-                pageItem.addEventListener('click', () => fetchPosts(i));
+                pageItem.addEventListener('click', () => fetchQaPosts(i));
                 paginationDiv.appendChild(pageItem);
             }
         }
 
-        showTab('view');
+        showTab('faq');
     </script>
 </body>
 
