--- a/public/write.html
+++ b/public/write.html
@@ -4,19 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>글 작성</title>
+    <title>게시글 등록</title>
 </head>
 
 <body>
     <h1>글 작성</h1>
-    <form id="postForm">
-        <label for="title">제목:</label><br>
-        <input type="text" id="title" name="title"><br><br>
-        <label for="content">내용:</label><br>
-        <textarea id="content" name="content"></textarea><br><br>
-        <input type="submit" value="올리기">
-        <button type="button" onclick="cancelPost()">취소</button>
-    </form>
+    <div class="board_write_wrap">
+        <div class="board_write">
+
+        <form id="postForm">
+            <div class="title">
+            <label for="title">제목:</label><br>
+            <input type="text" id="title" name="title" placeholder="제목 입력"><br><br>
+            </div>
+
+            <div class="cont">
+            <label for="content">내용:</label><br>
+            <textarea id="content" name="content"></textarea><br><br>
+            </div>
+
+            <div class="bt_wrap">
+            <input type="submit" value="올리기">
+            <button type="button" onclick="cancelPost()">취소</button>
+            </div>
+            
+        </form>
+
+        </div>
+    </div>
+
+
 
     <script>
         const authToken = sessionStorage.getItem('authToken');
