--- a/public/view.html
+++ b/public/view.html
@@ -57,7 +57,7 @@
     <div id="qa" class="tab-content">
         <h1>Q&A 게시판</h1>
         <p>학교 생활하면서 궁금한 사항들을 묻고 답하는 게시판입니다.</p>
-        <input type="text" id="searchInput" placeholder="검색어를 입력하세요.">
+        <input type="text" id="searchInput" placeholder="검색어 입력">
         <button onclick="searchPosts(1)">검색</button>
         <p id="error" class="error">검색어를 두 글자 이상 입력하세요.</p>
         <div id="qaPosts"></div>
@@ -138,7 +138,12 @@
         }
 
         function fetchQaPosts(page = 1) {
-            const query = document.getElementById('searchInput').value;
+            const query = document.getElementById('searchInput').value.trim();
+            if (query.length > 0 && query.length < 2) {
+                document.getElementById('error').style.display = 'block';
+                return;
+            }
+            document.getElementById('error').style.display = 'none';
             fetch(`/posts/qa?page=${page}&query=${query}`)
                 .then(response => response.json())
                 .then(data => {
@@ -184,11 +189,12 @@
 
         function confirmDelete() {
             const password = document.getElementById('deletePassword').value;
+            const token = sessionStorage.getItem('authToken');
             fetch(`/posts/${deletePostId}`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json',
-                    'x-auth-token': localStorage.getItem('token')
+                    'x-auth-token': token
                 },
                 body: JSON.stringify({ password })
             })
@@ -218,6 +224,10 @@
                 pageItem.addEventListener('click', () => fetchQaPosts(i));
                 paginationDiv.appendChild(pageItem);
             }
+        }
+
+        function searchPosts(page = 1) {
+            fetchQaPosts(page);
         }
 
         showTab('faq');
