--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
         </div>
         <nav class="folder">
             <div class="tabs">
-                <a href="templete/Sujung.html" class="tab"><div><span>수정캠퍼스</span></div></a>
-                <a href="templete/Unjung.html" class="tab"><div><span>운정캠퍼스</span></div></a>
-                <a href="templete/Bus.html" class="tab"><div><span>셔틀버스</span></div></a>
-                <a href="view.html" class="tab"><div><span>수정이 공간</span></div></a>
+                <a href="/Sujung" class="tab"><div><span>수정캠퍼스</span></div></a>
+                <a href="/Unjung" class="tab"><div><span>운정캠퍼스</span></div></a>
+                <a href="/Bus" class="tab"><div><span>셔틀버스</span></div></a>
+                <a href="/view" class="tab"><div><span>수정이 공간</span></div></a>
             </div>
         </nav>
     </header>
