--- a/public/register.html
+++ b/public/register.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>수룡 선배</title>
     <link rel="stylesheet" href="../asset/signin.css"> <!--스타일시트 적용-->
     <script  src="join.js"></script> <!--자바스크립트 적용-->
 </head>
-
 <body>
     <div class="logo">
-        <a href="Main.html"><img src="../asset/이미지/수룡선배 아이콘2.png" width="350px"></a>
+        <a href="index.html"><img src="../asset/이미지/수룡선배 아이콘2.png" width="350px"></a>
     </div>
 
   
@@ -21,19 +19,19 @@
         <td><h2>회원가입</h2></td>
     </tr>
     <tr>
-        <td> <label for="userID">아이디:</label> </td>
+        <td> <label for="userID">아이디</label> </td>
     </tr>
     <tr>
         <td> <input type="text" id="userID" name="userID" class="text"></td>
     </tr>
     <tr>
-        <td> <label for="password">비밀번호:</label> </td>
+        <td> <label for="password">비밀번호</label> </td>
     </tr>
     <tr>
         <td> <input type="password" id="password" name="password" class="text"> </td>
     </tr>
     <tr>
-        <td> <label for="confirmPassword">비밀번호 확인:</label> </td>
+        <td> <label for="confirmPassword">비밀번호 확인</label> </td>
     </tr>
     <tr>
         <td> 
@@ -42,13 +40,13 @@
         </td>
     </tr>
     <tr>
-        <td> <label for="username">이름:</label> </td>
+        <td> <label for="username">이름</label> </td>
     </tr>
     <tr>
         <td> <input type="text" id="username" name="username" class="text"> </td>
     </tr>
     <tr>
-        <td> <label for="studentID">학번:</label> </td>
+        <td> <label for="studentID">학번</label> </td>
     </tr>
     <tr>
         <td> <input type="text" id="studentID" name="studentID" class="text"> </td>
@@ -66,9 +64,6 @@
     
 </form>
 
-
-    <p id="error-message" style="color: red;"></p>
-    <p>이미 회원이신가요? <a href="/login">로그인</a></p>
 
     <script>
         document.getElementById('signup-form').addEventListener('submit', function(event) {
