--- a/public/reset_password.html
+++ b/public/reset_password.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비밀번호 재설정</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>수룡 선배</title>
+        <link rel="stylesheet" href="../asset/signin.css"> <!--스타일시트 적용-->
+        <script src="signin.js" defer></script>
+    </head>
 <body>
     <h1>비밀번호 재설정</h1>
     <form id="resetPasswordForm">
